# arduino-lib-googletest-sample

./: CMakeLists.txt  README.md  build.sh  library.properties
src/: TrimWhitespace.cpp  TrimWhitespace.h
test/: CMakeLists.txt  TrimWhitespaceTest.cpp
test/arduino_mock/: CMakeLists.txt
